unpackaged/objects/DependentPerson__c.object
<CustomObject>
    <fields>
        <fullName>BirthDate__c</fullName>
        <label>Birth Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Dependent persons</relationshipLabel>
        <relationshipName>DependentPersons</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Child</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tutored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil union</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wife/Husband</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SocialSecurityNumber__c</fullName>
        <description>The INSEE code is a 15-digit number containing only numeric characters, and no whitespace, punctuation, or alpha characters.</description>
        <inlineHelpText>The INSEE code is a 15-digit number containing only numeric characters, and no whitespace, punctuation, or alpha characters.</inlineHelpText>
        <label>Social Security Number</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Dependent person</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dependent persons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>